# lilya-converter

./: .gitignore  PLAN.md  README.md  mkdocs.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
.github/workflows/: test-suite.yml
docs/: missing-translation.md  research-notes.md
docs/en/: mkdocs.yml
docs/en/docs/: adding-adapter.md  architecture.md  commands.md  contributing.md  conversion-rules.md  examples-and-outputs.md  get-started.md  how-to-analyze-and-reports.md  how-to-convert-project.md  how-to-convert-single-file.md  how-to-verify-and-fix.md  index.md  release-notes.md  sponsorship.md  tutorial-first-conversion.md
docs/en/docs/stylesheets/: extra.css
docs_src/cli/: examples.py
docs_src/conversion/: complex_fastapi.py  complex_lilya.py  dependencies_fastapi.py  dependencies_lilya.py  django_input_urls.py  django_output_urls.py  fastapi_input.py  flask_input.py  flask_output.py  lilya_output.py  litestar_input.py  litestar_output.py  starlette_output.py
docs_src/examples/: analyze_stdout.txt
docs_src/reports/: convert_report_excerpt.json  scan_report_excerpt.json  verify_report_excerpt.json
findings/: PLAN.md
lilya_converter/: __main__.py  cli.py  engine.py  models.py  rules.py  scanner.py  transformer.py  writer.py
lilya_converter/adapters/: __init__.py
lilya_converter/adapters/django/: __init__.py  adapter.py  rules.py  scanner.py  transformer.py
lilya_converter/adapters/fastapi/: __init__.py  adapter.py  rules.py  scanner.py  transformer.py
lilya_converter/adapters/flask/: __init__.py  adapter.py  rules.py  scanner.py  transformer.py
lilya_converter/adapters/litestar/: __init__.py  adapter.py  rules.py  scanner.py  transformer.py
lilya_converter/adapters/starlette/: __init__.py  adapter.py  rules.py  scanner.py  transformer.py
lilya_converter/core/: __init__.py  errors.py  orchestrator.py  plans.py  protocols.py  registry.py  rules.py
lilya_converter/utils/: __init__.py  filesystem.py
scripts/: clean  install  publish
tests/: conftest.py
tests/cli/: test_cli.py
tests/docs/: test_docs_pipeline.py
tests/fixtures/django/minimal/project/: views.py
tests/fixtures/django/minimal/project/management/commands/: rebuild.py
tests/fixtures/docs_pipeline/golden/: guide.md  index.md
tests/fixtures/docs_pipeline/snippets/: note.md
tests/fixtures/docs_pipeline/source/: guide.md  index.md
tests/fixtures/fastapi/complex/: main.py
tests/fixtures/fastapi/dependencies/: main.py
tests/fixtures/fastapi/lifespan/: main.py
tests/fixtures/fastapi/middleware/: main.py
tests/fixtures/fastapi/responses/: main.py
tests/fixtures/fastapi/routers/: main.py
tests/fixtures/fastapi/routers/routers/: items.py
tests/fixtures/flask/minimal/: main.py
tests/fixtures/golden/complex/: main.py
tests/fixtures/golden/dependencies/: main.py
tests/fixtures/golden/lifespan/: main.py
tests/fixtures/golden/middleware/: main.py
tests/fixtures/golden/minimal/: main.py
tests/fixtures/golden/responses/: main.py
tests/fixtures/golden/routers/: main.py
tests/fixtures/golden/routers/routers/: items.py
tests/fixtures/golden_django/minimal/project/: urls.py  views.py
tests/fixtures/golden_django/minimal/project/directives/operations/: rebuild.py
tests/fixtures/golden_flask/minimal/: main.py
tests/fixtures/golden_litestar/minimal/: main.py
tests/fixtures/golden_starlette/minimal/: main.py
tests/fixtures/starlette/minimal/: main.py
tests/integration/: test_django_conversion.py  test_flask_conversion.py  test_golden_conversion.py  test_litestar_conversion.py  test_starlette_conversion.py
tests/unit/: test_django_transformer.py  test_engine.py  test_flask_scanner.py  test_flask_transformer.py  test_litestar_scanner.py  test_litestar_transformer.py  test_registry.py  test_scanner.py  test_starlette_scanner.py  test_starlette_transformer.py  test_transformer.py  test_writer.py
