[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilya_converter"
description = "Convert your existing projects into a Lilya application with ease"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ['version']
license = "MIT"
authors = [
    { name = "Tiago Silva", email = "tiago.silva@dymmond.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["sayer", "fastapi[standard]", "lilya[standard]"]
keywords = ["lilya_converter"]

[project.urls]
Homepage = "https://github.com/dymmond/lilya-converter"
Documentation = "https://lilya-converter.dymmond.com"
Changelog = "https://lilya-converter.dymmond.com/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/dymmond/lilya-converter"

[project.scripts]
lilya-converter = "lilya_converter.__main__:run"


[tool.hatch.version]
path = "lilya_converter/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "ty",
    "ruff>=0.3.0,<5.0.0",
    "pre-commit>=3.3.1,<4.0.0",
    "devtools>=0.12.2",
    "ipython",
    "ptpython",
    "twine",
]

[project.optional-dependencies]
testing = [
    "autoflake>=2.0.2,<3.0.0",
    "black==24.1.1,<25.0",
    "isort>=5.12.0,<6.0.0",
    "pytest>=7.2.2,<9.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "zensical>=0.0.23,<0.1.0",
]

[tool.hatch.envs.default.scripts]
clean_pyc = "find . -type f -name \"*.pyc\" -delete"
clean_pyi = "find . -type f -name \"*.pyi\" -delete"
clean_pycache = "find . -type d -name \"*__pycache__*\" -delete"
build_with_check = "hatch build; twine check dist/*"
lint = "ruff check --fix --line-length 99  lilya_converter tests {args}"
format = "hatch fmt && hatch fmt --check && hatch run test:check_types"

[tool.hatch.envs.docs]
dependencies = [
    "zensical>=0.0.23,<0.1.0",
]

[tool.hatch.envs.docs.scripts]
prepare = "scripts/docs.py prepare"
clean = "scripts/docs.py clean"
build = "scripts/docs.py build --clean"
serve = "scripts/docs.py serve"
dev = "scripts/docs.py serve"

[tool.hatch.envs.test]
features = ["testing"]

[tool.hatch.envs.test.scripts]
test = "hatch test -- {args}"
test_man = "hatch test -- {args} -s -vv"
check_types = "ty check lilya_converter"

[tool.isort]
profile = "black"
known_third_party = []
src_paths = ["lilya_converter"]

[tool.ty]

[tool.ty.environment]
python-version = "3.10"

[tool.ruff]
line-length = 120
force-exclude = true
exclude = ["docs_src", "tests/fixtures", "tests/fixtures/**"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I"]
ignore = ["E501", "B008", "C901", "B026"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.coverage.run]
parallel = true
context = '${CONTEXT}'
source = ["tests", "lilya_converter"]
# omit = []

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"
markers = [
    "docs: marks tests that validate the docs build pipeline",
]

[tool.hatch.build.targets.sdist]
include = ["/lilya_converter"]
